--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url("images/briannew.png");
+    background-image: url("briannew.png");
     background-size: cover;
     background-position: center;
 
